# stdx

./: Cargo.toml  Makefile  README.md  go.mod  go.sum
.devcontainer/: Dockerfile  bashrc
_deprecated/jst/: jst.go  jst_test.go
_deprecated/toml/: README.md  doc.go  encode.go  encode_test.go  error_test.go  parse.go
acme/: Cargo.toml
acme/src/: lib.rs  types.rs
anyerr/: Cargo.toml
anyerr/src/: backtrace.rs  chain.rs  context.rs  error.rs  lib.rs  ptr.rs
async-trait/: Cargo.toml
async-trait/src/: args.rs  bound.rs  expand.rs  lifetime.rs  parse.rs  receiver.rs  verbatim.rs
auth/: accounts.go  apikeys.go  sessions.go
automaxprocs/: CONTRIBUTING.md  README.md  automaxprocs.go  example_test.go
automaxprocs/maxprocs/: example_test.go  maxprocs.go  maxprocs_test.go
automaxprocs/tools/: go.mod
autoupdate/: autoupdate.go  const.go  relaese.go  signature.go  update.go  updater.go
barcode/: README.md
barcode/aztec/: azteccode.go  encoder.go  encoder_test.go  errorcorrection.go  highlevel.go  highlevel_test.go  state.go  token.go
barcode/codabar/: encoder.go
barcode/code128/: encode.go
barcode/code39/: encoder.go
barcode/code93/: encoder.go
barcode/datamatrix/: codelayout.go  datamatrixcode.go  encoder.go  errorcorrection.go
barcode/ean/: encoder.go
barcode/pdf417/: encoder.go  highlevel.go  pdfcode.go
barcode/qr/: alphanumeric.go  encoder.go  (+6 more)
base32/: Cargo.toml  base32.rs
base64/: Cargo.toml  base64_asm.go  base64_asm_test.go
bunny/: client.go
cfg-if/: Cargo.toml
cloudflare/: client.go  hostnames.go  ips.go  turnstile.go
cmp/: compare.go  compare_test.go  example_reporter_test.go  example_test.go  options.go  options_test.go  path.go  report_references.go  report_reflect.go  report_slices.go  report_text.go
cobra/: README.md  bash_completions.go  command.go  command_test.go  completions.go  flag_groups.go  shell_completions.go  user_guide.md
constant_time_eq/: Cargo.toml
countries/: Cargo.toml  countries.go  countries.json  countries_test.go
crc32fast/: Cargo.toml
cron/: Cargo.toml  README.md  doc.go
crypto/: Cargo.toml  aead.go  aead_test.go  aead_xchacha20poly1305.go  curve25519.go  curve25519_test.go  rand.go
crypto/aead/: aes_256_gcm.go  encrypt.go
crypto/bchacha20blake3/: bchacha20blake3.go  bchacha20blake3_test.go
crypto/blake3/: README.md  blake3.go  blake3_test.go
crypto/blake3/bao/: bao.go  bao_test.go
crypto/chacha20/: chacha20_386.go  chacha20_amd64.go  chacha20_test.go  xchacha20.go
crypto/chacha20blake3/: benchmark_test.go  chacha20_blake3.go  chacha20_blake3_test.go  xchacha20_blake3.go
crypto/kdf/: hkdf.go
crypto/schacha20blake3/: schacha20blake3.go  schacha20blake3_test.go
crypto/src/: crypto.rs  sha3.rs
crypto/src/aead/: aes.rs
crypto/src/hash/: mod.rs  sha2.rs  sha256.rs  sha3.rs  sha512.rs
crypto/src/hmac/: mod.rs  sha256.rs  sha512.rs
crypto/xchacha20sha256/: xchacha20_sha256.go
db/: db.go  migrate.go  sqlx.go
difflib/: README.md
docker/: Cargo.toml
dotenv/: README.md  dotenv.go
email/: blocklist.go  email.go  email_domains_blocklist.txt  emails_tlds_blocklist.txt  sources.md
embed/: Cargo.toml
feeds/: atom.go  consume_test.go
form_urlencoded/: Cargo.toml  form_urlencoded.rs
getopts/: Cargo.toml
go-gitdiff/: README.md
goproxy/: README.md  counterecryptor_test.go  doc.go  proxy_test.go
gostub/: README.md  README.md.tmpl  env_test.go  examples_test.go  examples_time_func_test.go
guid/: doc.go  guid.go  uuid_test.go
hostname/: Cargo.toml
html_escape/: Cargo.toml
httpdate/: Cargo.toml
httpx/: error.go  webapphandler.go  webapphandler_old.go  webapphandler_test.go
hyper_utils/: Cargo.toml
imaging/: example_test.go
ipnetwork/: Cargo.toml  README.md
itoa/: Cargo.toml
jst/: jst.go
jwt/: hmac.go  jwt.go  jwt_benchmark_test.go  jwt_test.go
mail_builder/: Cargo.toml
mailgun/: client.go
maxminddb/: Cargo.toml
memmem/: Cargo.toml
migrate/: migrate.go
mime_guess/: Cargo.toml  build.rs
mmdb/: README.md  decoder_test.go  deserializer.go  deserializer_test.go  example_test.go  reader_test.go  traverse_test.go  verifier_test.go
net/: Cargo.toml  hostname.rs  net.rs
num_cpus/: Cargo.toml
objx/: README.md  accessors_test.go  conversions_test.go  fixture_test.go  map_test.go  mutations_test.go  security_test.go  simple_example_test.go  tests_test.go  type_specific_codegen_test.go  type_specific_test.go  value_test.go
opt/: opt.go
orderedmap/: orderedmap.go  orderedmap_test.go
otc/: otc.go  otc_test.go
otp/: README.md  doc.go  otp.go  otp_test.go
percent_encoding/: Cargo.toml  percent_encoding.rs
pflag/: README.md  example_test.go  flag.go  flag_test.go
pin_project_lite/: Cargo.toml
postmark/: Cargo.toml  client.go
queue/: queue.go
queue_old/: queue.go
retry/: retry.go  retry_test.go
reuseport/: reuse_test.go
routingtable/: stride_table_test.go
ryu/: Cargo.toml
scheduler/: scheduler.go
serde_urlencoded/: Cargo.toml
serde_yaml/: Cargo.toml
set/: set.go  set_test.go
singleinstance/: singleinstance_unix_test.go  singleinstance_windows_test.go
slicesx/: slicex.go  unique.go  unique_test.go
spew/: .travis.yml  README.md  common_test.go  dump_test.go  dumpcgo_test.go  example_test.go  format_test.go  spew_test.go  test_coverage.txt
statelesstoken/: stateless.go  stateless_test.go
strings/: Cargo.toml
sysinfo/: README.md  example_test.go  hypervisor.go
testify/: README.md  package_test.go
thiserror/: Cargo.toml
tld/: Cargo.toml
token/: token.go  token_test.go
toml/: bench_test.go  decode_test.go  example_test.go  toml_test.go
ulid/: ulid.go  ulid_test.go
unsafe_libyaml/: Cargo.toml
useragent/: ua_test.go
uuid/: Cargo.toml  null_test.go  sql_test.go  uuid.go  uuid_stdx.go  uuid_test.go  v7.go
uuid/src/: serde.rs  uuid.rs
validate/: validator.go
workerpool/: workerpool.go
xxh3/: README.md  escape_test.go
yaml/: README.md  decode_test.go  encode_test.go  example_embedded_test.go  limit_test.go  node_test.go  suite_test.go
zign/: init.go  sign.go  verify.go  verify_test.go
(+237 files in other folders)
