[package]
name = "crypto"
version = "0.1.0"
edition = "2024"
authors = ["Sylvain Kerkour"]

[lib]
path = "./src/crypto.rs"

[dependencies]
sha2 = { git = "https://github.com/RustCrypto/hashes", rev = "ae568d4fb26873479c4e564202632912579a2bb2" }
sha3 = { git = "https://github.com/RustCrypto/hashes", rev = "ae568d4fb26873479c4e564202632912579a2bb2", features = ["asm"] }

[dev-dependencies]
hex = { path = "../hex" }
