[package]
name = "percent-encoding"
version = "2.3.1"
authors = ["The rust-url developers"]
description = "Percent encoding and decoding"
categories = ["no_std"]
repository = "https://github.com/bloom42/stdx"
license = "Apache-2.0"
edition = "2021"
rust-version = "1.56"

[lib]
path = "./percent_encoding.rs"

[features]
default = ["std"]
std = ["alloc"]
alloc = []

[package.metadata.docs.rs]
rustdoc-args = ["--generate-link-to-definition"]
